@@ -22,7 +22,7 @@ LIB_SRC_CORE_LIST = \
   src/log.sh \
   src/notif.sh \
   src/action.sh \
-  src/user.sh \
+  src/appli.sh \
   src/module_this.sh \
   src/engine.sh
 
