@@ -1,24 +1,24 @@
 ################################################################################
 ################################################################################
 
-SOAF_USER_SH_DIR=$(dirname $(realpath $(which $0)))
+SOAF_APPLI_SH_DIR=$(dirname $(realpath $(which $0)))
 
-SOAF_USER_NAME_ATTR="soaf_user_name"
-SOAF_USER_MODULE_NAME_ATTR="soaf_user_module_name"
+SOAF_APPLI_NAME_ATTR="soaf_appli_name"
+SOAF_APPLI_MODULE_NAME_ATTR="soaf_appli_module_name"
 
 ################################################################################
 ################################################################################
 
-soaf_user_init() {
-	soaf_info_add_var SOAF_USER_SH_DIR
+soaf_appli_init() {
+	soaf_info_add_var SOAF_APPLI_SH_DIR
 }
 
-soaf_define_add_this_init_fn soaf_user_init
+soaf_define_add_this_init_fn soaf_appli_init
 
 ################################################################################
 ################################################################################
 
-soaf_create_user_nature() {
+soaf_create_appli_nature() {
 	local NATURE=$1
 	local NAME=${2:-$SOAF_NAME}
 	local VERSION=$3
@@ -28,9 +28,9 @@ soaf_create_user_nature() {
 	local PRE_ACTION_FN=$7
 	local POST_ACTION_FN=$8
 	local EXIT_FN=$9
-	local MODULE_NAME="soaf.user.module.$NAME"
+	local MODULE_NAME="soaf.appli.module.$NAME"
 	soaf_create_module $MODULE_NAME $VERSION "$CFG_FN" "$INIT_FN" \
 		"$PREPENV_FN" "$PRE_ACTION_FN" "$POST_ACTION_FN" "$EXIT_FN"
-	soaf_map_extend $NATURE $SOAF_USER_NAME_ATTR $NAME
-	soaf_map_extend $NATURE $SOAF_USER_MODULE_NAME_ATTR $MODULE_NAME
+	soaf_map_extend $NATURE $SOAF_APPLI_NAME_ATTR $NAME
+	soaf_map_extend $NATURE $SOAF_APPLI_MODULE_NAME_ATTR $MODULE_NAME
 }
