@@ -118,9 +118,10 @@ soaf_do_job_process() {
 
 soaf_do_job_valid() {
 	local JOB=$1
+	local APPLI_NAME=$(soaf_module_this_appli_name)
 	local JOB_UPPER=$(soaf_upper $JOB)
 	local JOB_LOG_DIR=$(soaf_map_get $JOB $SOAF_JOB_LOG_DIR_ATTR \
-		$SOAF_LOG_DIR/$SOAF_USER_NAME.job.$JOB)
+		$SOAF_LOG_DIR/$APPLI_NAME.job.$JOB)
 	soaf_mkdir $JOB_LOG_DIR "" $SOAF_JOB_LOG_NAME
 	local JOB_INPROG_FILE=$JOB_LOG_DIR/$JOB.inprog
 	if [ ! -f $JOB_INPROG_FILE ]
