@@ -13,7 +13,9 @@ SOAF_PF_IN_CACHE_ATTR="soaf_pf_in_cache"
 ################################################################################
 
 soaf_pf_cfg() {
-	soaf_cfg_set SOAF_PF_FILE $SOAF_WORK_DIR/$SOAF_USER_NAME.prop
+	local APPLI_NATURE=$1
+	local APPLI_NAME=$(soaf_map_get $APPLI_NATURE $SOAF_APPLI_NAME_ATTR)
+	soaf_cfg_set SOAF_PF_FILE $SOAF_WORK_DIR/$APPLI_NAME.prop
 }
 
 soaf_pf_init() {
