@@ -46,7 +46,7 @@ test_exit() {
 	soaf_log_info "RET_CODE=[$ERR]" $TEST_LOG_NAME
 }
 
-soaf_create_user_nature $TEST_NATURE "test" "1.0.1" \
+soaf_create_appli_nature $TEST_NATURE "test" "1.0.1" \
 	test_cfg test_init test_prepenv "" "" test_exit
 
 ################################################################################
